--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,10 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 server.port=8082
 spring.application.name=EMPLOYEE-SERVICE
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
